@@ -1,0 +1,52 @@
+libcogl-path.so.20 libcogl-path20 #MINVER#
+ cogl2_clip_push_from_path@Base 1.17.4
+ cogl2_path_arc@Base 1.17.4
+ cogl2_path_close@Base 1.17.4
+ cogl2_path_curve_to@Base 1.17.4
+ cogl2_path_ellipse@Base 1.17.4
+ cogl2_path_fill@Base 1.17.4
+ cogl2_path_get_fill_rule@Base 1.17.4
+ cogl2_path_line@Base 1.17.4
+ cogl2_path_line_to@Base 1.17.4
+ cogl2_path_move_to@Base 1.17.4
+ cogl2_path_new@Base 1.17.4
+ cogl2_path_polygon@Base 1.17.4
+ cogl2_path_polyline@Base 1.17.4
+ cogl2_path_rectangle@Base 1.17.4
+ cogl2_path_rel_curve_to@Base 1.17.4
+ cogl2_path_rel_line_to@Base 1.17.4
+ cogl2_path_rel_move_to@Base 1.17.4
+ cogl2_path_round_rectangle@Base 1.17.4
+ cogl2_path_set_fill_rule@Base 1.17.4
+ cogl2_path_stroke@Base 1.17.4
+ cogl_clip_push_from_path@Base 1.17.4
+ cogl_clip_push_from_path_preserve@Base 1.17.4
+ cogl_framebuffer_fill_path@Base 1.17.4
+ cogl_framebuffer_push_path_clip@Base 1.17.4
+ cogl_framebuffer_stroke_path@Base 1.17.4
+ cogl_get_path@Base 1.17.4
+ cogl_is_path@Base 1.17.4
+ cogl_path_arc@Base 1.17.4
+ cogl_path_close@Base 1.17.4
+ cogl_path_copy@Base 1.17.4
+ cogl_path_curve_to@Base 1.17.4
+ cogl_path_ellipse@Base 1.17.4
+ cogl_path_fill@Base 1.17.4
+ cogl_path_fill_preserve@Base 1.17.4
+ cogl_path_fill_rule_get_type@Base 1.17.4
+ cogl_path_get_fill_rule@Base 1.17.4
+ cogl_path_line@Base 1.17.4
+ cogl_path_line_to@Base 1.17.4
+ cogl_path_move_to@Base 1.17.4
+ cogl_path_new@Base 1.17.4
+ cogl_path_polygon@Base 1.17.4
+ cogl_path_polyline@Base 1.17.4
+ cogl_path_rectangle@Base 1.17.4
+ cogl_path_rel_curve_to@Base 1.17.4
+ cogl_path_rel_line_to@Base 1.17.4
+ cogl_path_rel_move_to@Base 1.17.4
+ cogl_path_round_rectangle@Base 1.17.4
+ cogl_path_set_fill_rule@Base 1.17.4
+ cogl_path_stroke@Base 1.17.4
+ cogl_path_stroke_preserve@Base 1.17.4
+ cogl_set_path@Base 1.17.4
