@@ -1,2 +1,1 @@
 usr/lib/*/libcogl.so.*
-usr/lib/*/libcogl-path.so.*
